[package]
name = "sturdy-couscous"
version = "0.0.4"
edition = "2021"
description = "URI redirect in rust business logic repo"
repository = "https://github.com/askbow/sturdy-couscous"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sturdy_couscous"
crate-type = ["staticlib", "cdylib"]

[dependencies]
